--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
-        <header>
+    <header class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
-
         <nav>
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
@@ -19,11 +17,14 @@
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
         </nav>
-        </header>
+    </header>
+
+    <div class="hero">
+        <img src="../images/digital-marketing-meeting.jpg" />
     </div>
 
-    <div class="hero"></div>
     <div class="content">
+    <main>
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -73,6 +74,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
+    </main>
     </div>
 
     <div class="footer">
