--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="../images/digital-marketing-meeting.jpg" class="hero"/>
 
     <section>
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
