--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </nav>
     </header>
 
-    <img src="../images/digital-marketing-meeting.jpg" class="hero"/>
+    <img src="../images/digital-marketing-meeting.jpg" class="hero" alt="Four marketers sitting around a table, having a meeting"/>
 
     <section>
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="An open notebook with a mind map of SEO components such as content, backlink, and mobile compatibility, alongside a laptop, cup of coffee, magnifying glass, and colorful pens on a wooden surface"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -31,7 +31,7 @@
         </article>
 
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person analysing online reputation data on a laptop screen with colorful bar and pie charts labeled 'REPUTATION', while holding a smartphone in the other hand, with a cup of coffee and a tablet lying on the table."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -39,7 +39,7 @@
         </article>
 
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A top-down view of a meeting table with people engaging in social media marketing planning. The table is scattered with colorful icons representing different social media functions like 'like', 'share', 'tweet', and 'music', and digital devices, indicating an interactive strategy session."/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -50,7 +50,7 @@
     <aside class="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Graphic icon of a gear and a funnel with a dollar sign, symbolising the process of lead generation and conversion to revenue."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -58,7 +58,7 @@
 
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Icon representing brand awareness with a central light bulb surrounded by three expanding sound waves, symbolizing the spread of brand visibility and recognition."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -66,7 +66,7 @@
 
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Graphic icon representing brand advertising costs with coins with dollar signs on them and a cogwheel."></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -76,7 +76,7 @@
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
 </body>
