corrected file mapping of background image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <img src="../images/digital-marketing-meeting.jpg" class="hero" alt="Four marketers sitting around a table, having a meeting"/>
+    <img src="./assets/images/digital-marketing-meeting.jpg" class="hero" alt="Four marketers sitting around a table, having a meeting"/>
 
     <section>
         <article id="search-engine-optimization" class="search-engine-optimization">
