added comments to html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Horiseon Agency</title>
 </head>
 
+<!-- Changed <div> tags to <header> and <nav> to indicate that this is the header of the page with links, with the links correctly configurated to take the user to that specific part of the page when clicked on -->
+
 <body>
     <header>
             <h1>Hori<span class="seo">seo</span>n</h1>
@@ -19,7 +21,11 @@
         </nav>
     </header>
 
+<!-- Changed <div> to <img> so that it was clearer what the class="hero" was referring to -->
+
     <img src="./assets/images/digital-marketing-meeting.jpg" class="hero" alt="Four marketers sitting around a table, having a meeting"/>
+
+<!-- Changed <div> to <section> and <article> to indicate that this is the main section of the page that has different snippets of information -->
 
     <section>
         <article id="search-engine-optimization" class="search-engine-optimization">
@@ -47,6 +53,8 @@
         </article>
     </section>
 
+<!-- Changed <div> to <aside> and <article> to indicate that this is the side section of the page with different bits of information -->
+
     <aside class="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -72,6 +80,8 @@
             </p>
         </article>
     </aside>
+
+<!-- Changed <div> to <footer> to indicate that this is the bottom section of the page -->
 
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
