added comments to css file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 <!-- Changed <div> to <img> so that it was clearer what the class="hero" was referring to -->
 
-    <img src="./assets/images/digital-marketing-meeting.jpg" class="hero" alt="Four marketers sitting around a table, having a meeting"/>
+    <figure>
+        <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="Four marketers sitting around a table, having a meeting"/>
+    </figure>
 
 <!-- Changed <div> to <section> and <article> to indicate that this is the main section of the page that has different snippets of information -->
 
@@ -84,7 +86,7 @@
 <!-- Changed <div> to <footer> to indicate that this is the bottom section of the page -->
 
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
